--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ DEBUG=TRUE
 
 # Front-End Variables
 BASENAME=/
-#BACKEND_URL=
+BACKEND_URL=https://obscure-robot-5gqrjj97pq762pj5-3001.app.github.dev
