--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,8 @@ cloudinary = "*"
 flask-admin = "*"
 typing-extensions = "*"
 flask-jwt-extended = "*"
+flask-oauthlib = "*"
+werkzeug = "==2.3.0"
 
 [requires]
 python_version = "3.10"
